# sorta.fit

./: .env.example  .gitignore  .gitmodules  AGENTS.md  CLAUDE.md  README.md  pyproject.toml  run.bat  run.py  run.sh  setup.bat  setup.sh  setup_wizard.py  test.sh
.claude/: settings.local.json.example
.claude/agents/: architect.md  coder.md  documenter.md  opus-high.md  opus-max.md  refiner.md  reviewer.md  triager.md
.github/workflows/: test.yml
_bash/: .env.example  package.json  test.sh
_bash/.claude/: settings.local.json  settings.local.json.example
_bash/adapters/: github-issues.config.sh.example  jira.config.sh  linear.config.sh.example
_bash/core/: config.sh  runner-lib.sh  utils.sh
_bash/docs/: adapters.md  runners.md  setup-guide.md  writing-runners.md
_bash/prompts/: code.md
_bash/runners/: architect.sh  code.sh  documenter.sh  merge.sh  refine.sh  release-notes.sh  review.sh  triage.sh
_bash/setup/: server.js
adapters/: github-issues.config.sh.example  github-issues.sh  jira.config.sh  jira.sh  linear.config.sh.example  linear.sh
core/: config.sh  loop.sh  runner-lib.sh  utils.sh
docs/: adapters.md  contributing.md  index.html  recipes.md  runners.md  writing-runners.md
prompts/: architect.md  documenter.md  refine.md  review.md
recipes/: documenter.sh
runners/: architect.sh  bounce.sh  code.sh  documenter.sh  merge.sh  refine.sh  release-notes.sh  review.sh  triage.sh
setup/: index.html  server.js
sortafit/: __main__.py  claude.py  config.py  events.py  gh_auth.py  loop.py  runner_lib.py  utils.py
tests/: conftest.py
(+61 files in other folders)
